gcc/testsuite/rust/rustc/ui/unused/unused-macro-with-follow-violation.rs
#![allow(unused_macros)]

macro_rules! test {
    ($e:expr +) => () // { dg-error "" "" { target *-*-* } }
}

fn main() { }

